@@ -1,3 +1,6 @@
+ * Fix compatibility with desktop KeePass 2.20
+ * Verify header integrity of .kdbx databases
+
 KeePassDroid (1.9.14)
  * Resolve crashes when switch back to the entry view
  * Start making use of action bar on devices with Android >= 3.0
